==> ZBT1314douhao/STM32F107VCT6/1.Bare/5. SPI/2. SPI_W25X16/SPI_W25X16_Polling/drivers/user_drivers/lcd_ssd1289.c <==
#include "bsp.h"
#include "lcd_font.h"
#define LCD_WR_PIN			GPIO_PIN_14
#define LCD_WR_PORT			GPIOD
#define LCD_WR_APB2Periph	RCC_APB2Periph_GPIOD
#define LCD_CS_PIN      	GPIO_PIN_7
#define LCD_CS_PORT     	GPIOC
#define LCD_CS_APB2Periph	RCC_APB2Periph_GPIOC
#define LCD_RS_PIN      	GPIO_PIN_15
#define LCD_RS_PORT     	GPIOD
#define LCD_RS_APB2Periph	RCC_APB2Periph_GPIOD
#define LCD_RD_PIN      	GPIO_PIN_13
#define LCD_RD_PORT     	GPIOD
#define LCD_RD_APB2Periph	RCC_APB2Periph_GPIOD
#define LCD_DATA_PORT   	GPIOE
#define LCD_DATA_APB2Periph	RCC_APB2Periph_GPIOE
#define lcd_set_cs()			HAL_GPIO_WritePin(LCD_CS_PORT, LCD_CS_PIN,   GPIO_PIN_SET)
#define lcd_clr_cs()			HAL_GPIO_WritePin(LCD_CS_PORT, LCD_CS_PIN,   GPIO_PIN_RESET)
#define lcd_set_rs()			HAL_GPIO_WritePin(LCD_RS_PORT, LCD_RS_PIN,   GPIO_PIN_SET)
#define lcd_clr_rs()			HAL_GPIO_WritePin(LCD_RS_PORT, LCD_RS_PIN,   GPIO_PIN_RESET)
#define lcd_set_wr()			HAL_GPIO_WritePin(LCD_WR_PORT, LCD_WR_PIN,   GPIO_PIN_SET)
#define lcd_clr_wr()			HAL_GPIO_WritePin(LCD_WR_PORT, LCD_WR_PIN,   GPIO_PIN_RESET)
#define lcd_set_rd()			HAL_GPIO_WritePin(LCD_RD_PORT, LCD_RD_PIN,   GPIO_PIN_SET)
#define lcd_clr_rd()			HAL_GPIO_WritePin(LCD_RD_PORT, LCD_RD_PIN,   GPIO_PIN_RESET)
#define lcd_set_rst()			HAL_GPIO_WritePin(LCD_RST_PORT, LCD_RST_PIN, GPIO_PIN_SET)
#define lcd_clr_rst()			HAL_GPIO_WritePin(LCD_RST_PORT, LCD_RST_PIN, GPIO_PIN_RESET)

static void lcd_pin_config(void)
{   /**< 相关时钟已由Cube MX配置完成 */
	GPIO_InitTypeDef GPIO_InitStructure;
	
	GPIO_InitStructure.Pin   = GPIO_PIN_All;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Mode  = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(LCD_DATA_PORT, &GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = LCD_WR_PIN;
	HAL_GPIO_Init(LCD_WR_PORT, &GPIO_InitStructure);
	GPIO_InitStructure.Pin = LCD_CS_PIN;
	HAL_GPIO_Init(LCD_CS_PORT, &GPIO_InitStructure);	
	GPIO_InitStructure.Pin = LCD_RS_PIN;
	HAL_GPIO_Init(LCD_RS_PORT, &GPIO_InitStructure);
	GPIO_InitStructure.Pin = LCD_RD_PIN;
	HAL_GPIO_Init(LCD_RD_PORT, &GPIO_InitStructure);	
}

static void lcd_data_as_input(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;  
    GPIO_InitStructure.Pin   = GPIO_PIN_All;
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStructure.Mode  = GPIO_MODE_INPUT;
    GPIO_InitStructure.Pull  = GPIO_NOPULL;
    HAL_GPIO_Init(LCD_DATA_PORT, &GPIO_InitStructure);
}

static void lcd_data_as_output(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;  
    GPIO_InitStructure.Pin   = GPIO_PIN_All;
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStructure.Mode  = GPIO_MODE_OUTPUT_PP;
    HAL_GPIO_Init(LCD_DATA_PORT, &GPIO_InitStructure);
}
